* Enhanced the 'to' attribute of the 'transition' element ${expression} capable; the resolved string expression(s) are 
  treated as the target state of the transition.
* Enhanced the 'view' attribute of the 'view-state' and 'end-state' elements to be fully ${expression} capable; previously 
  expressions could only be defined for redirect parameters.
* Refined the FlowArtifactFactory interface, acting now as both a service locator and abstract factory.
* Refined the FlowBuilder interface, adding builder methods for each type of major Flow construct.
* Reworked AbstractFlowBuilder and XmlFlowBuilder to bring them in-line with the FlowArtifactFactory and FlowBuilder refinements.
* XmlFlowBuilder now respects deployment within a WebApplicationContext now, supporting access to the 
  ServletContext from within beans deployed in flow-local contexts.

Package org.springframework.webflow.context
* Changed the String-keyed map attribute iteration construct from 'Enumeration' to 'Iterator'.

Package org.springframework.webflow.execution
* Simplified the ConditionalFlowExecutionListenerLoader configuration interface.
* Refined the FlowExecutionListener interface, improving the sessionStarting and eventSignaled method signatures.
* Fixed a bug in ContinuationFlowExecutionRepository related to conversation scope restoration (which could cause a NPE).
* Added an 'input' Attribute argument to the FlowExecution.start operation, for passing input into a starting
  flow execution in a consistent manner.
* Introduced an EventId value object for describing an external event that has been signaled.
* Streamlined FlowExecutionRepository interface to remove experimental 'getCurrentViewSelection' and 
  'setCurrentViewSelection' methods.

Package org.springframework.webflow.executor
* Added 'appendFlowInputAttributesToRequestPath' property to RequestPathFlowExecutorArgumentExtractor to control